docs/samples/actual-20251109T090646Z/iptables_all_rules.txt
-P INPUT ACCEPT
-P FORWARD DROP
-P OUTPUT ACCEPT
-N DOCKER
-N DOCKER-BRIDGE
-N DOCKER-CT
-N DOCKER-FORWARD
-N DOCKER-ISOLATION-STAGE-1
-N DOCKER-ISOLATION-STAGE-2
-N DOCKER-USER
-N vpc-t1-vpc
-N vpc-t2-vpc
-A FORWARD -i br-t2-vpc -m comment --comment "vpcctl:t2_vpc:jump" -j vpc-t2-vpc
-A FORWARD -i br-t1-vpc -m comment --comment "vpcctl:t1_vpc:jump" -j vpc-t1-vpc
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -i br-t1-vpc -o enX0 -m comment --comment "vpcctl:t1_vpc:fwd-out" -j ACCEPT
-A FORWARD -i enX0 -o br-t1-vpc -m state --state RELATED,ESTABLISHED -m comment --comment "vpcctl:t1_vpc:fwd-in" -j ACCEPT
-A DOCKER ! -i br-ce2aec6a9573 -o br-ce2aec6a9573 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o br-ce2aec6a9573 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o br-ce2aec6a9573 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-ISOLATION-STAGE-1
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-ce2aec6a9573 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-ce2aec6a9573 ! -o br-ce2aec6a9573 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-ce2aec6a9573 -j DROP
-A vpc-t1-vpc -s 10.30.0.0/16 -d 10.30.0.0/16 -m comment --comment "vpcctl:t1_vpc:intra" -j ACCEPT
-A vpc-t1-vpc -s 10.30.1.0/24 -d 10.30.1.0/24 -o br-t2-vpc -m comment --comment "vpcctl:peer:t1_vpc:t2_vpc" -j ACCEPT
-A vpc-t1-vpc -s 10.30.1.0/24 -d 10.40.1.0/24 -o br-t2-vpc -m comment --comment "vpcctl:peer:t1_vpc:t2_vpc" -j ACCEPT
-A vpc-t1-vpc -s 10.40.1.0/24 -d 10.30.1.0/24 -o br-t2-vpc -m comment --comment "vpcctl:peer:t1_vpc:t2_vpc" -j ACCEPT
-A vpc-t1-vpc -s 10.40.1.0/24 -d 10.40.1.0/24 -o br-t2-vpc -m comment --comment "vpcctl:peer:t1_vpc:t2_vpc" -j ACCEPT
-A vpc-t1-vpc -o br-t2-vpc -m comment --comment "vpcctl:peer-drop:t1_vpc:t2_vpc" -j DROP
-A vpc-t2-vpc -s 10.40.0.0/16 -d 10.40.0.0/16 -m comment --comment "vpcctl:t2_vpc:intra" -j ACCEPT
-A vpc-t2-vpc -s 10.30.1.0/24 -d 10.30.1.0/24 -o br-t1-vpc -m comment --comment "vpcctl:peer:t1_vpc:t2_vpc" -j ACCEPT
-A vpc-t2-vpc -s 10.30.1.0/24 -d 10.40.1.0/24 -o br-t1-vpc -m comment --comment "vpcctl:peer:t1_vpc:t2_vpc" -j ACCEPT
-A vpc-t2-vpc -s 10.40.1.0/24 -d 10.30.1.0/24 -o br-t1-vpc -m comment --comment "vpcctl:peer:t1_vpc:t2_vpc" -j ACCEPT
-A vpc-t2-vpc -s 10.40.1.0/24 -d 10.40.1.0/24 -o br-t1-vpc -m comment --comment "vpcctl:peer:t1_vpc:t2_vpc" -j ACCEPT
-A vpc-t2-vpc -o br-t1-vpc -m comment --comment "vpcctl:peer-drop:t1_vpc:t2_vpc" -j DROP
